--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "firebase": "^10.13.1",
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-bootsplash": "^6.1.3",
@@ -20,6 +21,7 @@
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
